Implemented arbitrary choice of dfs or bfs and tested (65-implement-generic-class)